--- a/excercises/05-base-nodejsapp-solved/nodeapp/package.json
+++ b/excercises/05-base-nodejsapp-solved/nodeapp/package.json
@@ -19,6 +19,7 @@
     "logfmt": "^1.2.0",
     "mocha": "^4.0.1",
     "mysql": "^2.15.0",
+    "nodemon": "^1.12.1",
     "should": "^13.1.3"
   }
 }
