--- a/nodeapp/package.json
+++ b/nodeapp/package.json
@@ -18,6 +18,7 @@
     "express-myconnection": "^1.0.4",
     "logfmt": "^1.2.0",
     "mocha": "^4.0.1",
+    "nodemon": "^1.12.1",
     "mysql": "^2.15.0",
     "should": "^13.1.3"
   }
